# fpga-training

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  project.cst
01_basic/: Makefile
01_basic/src/: project.v
02_softcore/: Makefile  README.md  tangnano20k.cst
02_softcore/firmware/: CMakeLists.txt  Makefile  conv_to_init.c  linker.ld  toolchain.cmake
02_softcore/firmware/include/: gpio.h  leds.h  uart.h  ws2812b.h
02_softcore/firmware/src/: gpio.c  leds.c  main.c  startup.s  uart.c  ws2812b.c
02_softcore/src/: gpio.v  led_ctrl.v  reset_ctrl.v  sram.v  top.v  uart.v  uart_wrap.v  ws2812b.v
02_softcore/src/tb/: top_tb.v  uart_fifo_tb.v  uart_tb.v  uart_transmitter_tb.v  ws2812b_tb.v
src/: project.v
